--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
   </head>
   <body>
     <div class="container">
-      <h2>Is It A Palindrome?</h2>
+      <h2 class="app-title">Is It A Palindrome?</h2>
       <div class="input-wrapper">
         <input type="text" id="input-text" placeholder="Enter a word">
         <button id="btn">Check</button>
-        <p id="result">button</p>
-      </div>
+    </div>
+    <p id="result"></p>
     </div>
 
     <script src="app.js"></script>
